--- a/app/index.css
+++ b/app/index.css
@@ -241,3 +241,17 @@ li {
   font-size: 20px;
   margin: 50px 0;
 }
+
+.card {
+  margin: 10px 0;
+  width: 250px;
+  padding: 20px;
+}
+
+.card a {
+  text-decoration: none;
+}
+
+.card img {
+  margin-bottom: 8px;
+}
